# hearth

./: CONTRIBUTORS.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
.github/workflows/: depgraph.yml  hearth.yml  kindling.yml  pr.yml
.helix/: config.toml
core/ipc/: Cargo.toml
core/ipc/src/: lib.rs
core/macros/: Cargo.toml
core/macros/src/: lib.rs
core/runtime/: Cargo.toml
core/runtime/src/: asset.rs  connection.rs  lib.rs  lump.rs  process.rs  registry.rs  runtime.rs  utils.rs
core/schema/: Cargo.toml
core/schema/src/: canvas.rs  debug_draw.rs  fs.rs  lib.rs  protocol.rs  registry.rs  renderer.rs  terminal.rs  wasm.rs  window.rs
crates/font-mud/: Cargo.toml
crates/font-mud/examples/: pack_mononoki.rs  pack_noto_sans.rs
crates/font-mud/src/: error.rs  glyph_atlas.rs  glyph_bitmap.rs  lib.rs
crates/hearth-client/: Cargo.toml
crates/hearth-client/src/: main.rs  window.rs
crates/hearth-client/src/debug_draw/: mod.rs
crates/hearth-cognito/: Cargo.toml
crates/hearth-cognito/examples/: run_wasm.rs
crates/hearth-cognito/src/: cognito.rs  lib.rs
crates/hearth-core/: Cargo.toml
crates/hearth-core/src/: asset.rs  connection.rs  lib.rs  lump.rs  process.rs  pubsub.rs  registry.rs  runtime.rs  utils.rs
crates/hearth-core/src/api/: lump_store.rs  mod.rs
crates/hearth-core/src/process/: context.rs  factory.rs  local.rs  mod.rs  process.rs.bak  registry.rs  remote.rs  rpc.rs  store.rs
crates/hearth-ctl/: Cargo.toml
crates/hearth-ctl/src/: kill.rs  list_peers.rs  list_processes.rs  main.rs  run_mock_runtime.rs  spawn_wasm.rs
crates/hearth-daemon/: Cargo.toml
crates/hearth-daemon/src/: lib.rs
crates/hearth-debug-draw/: Cargo.toml
crates/hearth-debug-draw/src/: lib.rs
crates/hearth-fs/: Cargo.toml
crates/hearth-fs/src/: lib.rs
crates/hearth-guest/: Cargo.toml
crates/hearth-guest/src/: lib.rs
crates/hearth-init/: Cargo.toml
crates/hearth-init/src/: lib.rs
crates/hearth-ipc/: Cargo.toml
crates/hearth-ipc/src/: lib.rs
crates/hearth-macros/: Cargo.toml
crates/hearth-macros/src/: lib.rs
crates/hearth-network/: Cargo.toml
crates/hearth-network/src/: auth.rs  connection.rs  encryption.rs  lib.rs
crates/hearth-panels/: Cargo.toml
crates/hearth-panels/src/: lib.rs
crates/hearth-rend3/: Cargo.toml
crates/hearth-rend3/src/: lib.rs  service.rs
crates/hearth-rend3/src/utils/: mod.rs
crates/hearth-renderer/: Cargo.toml
crates/hearth-renderer/src/: lib.rs
crates/hearth-rpc/: Cargo.toml
crates/hearth-rpc/src/: caps.rs  lib.rs  mocks.rs
crates/hearth-runtime/src/: registry.rs  utils.rs
crates/hearth-schema/src/: panels.rs
crates/hearth-server/: Cargo.toml
crates/hearth-server/src/: main.rs
crates/hearth-terminal/: Cargo.toml
crates/hearth-terminal/examples/: demo.rs
crates/hearth-terminal/src/: draw.rs  lib.rs  shaders.wgsl  terminal.rs  text.rs
crates/hearth-types/: Cargo.toml
crates/hearth-types/src/: debug_draw.rs  fs.rs  lib.rs  panels.rs  protocol.rs  registry.rs  renderer.rs  terminal.rs  wasm.rs  window.rs
crates/hearth-wasm/: Cargo.toml
crates/hearth-wasm/examples/: run_wasm.rs
crates/hearth-wasm/src/: lib.rs
crates/rend3-alacritty/: Cargo.toml
crates/rend3-alacritty/examples/: demo.rs
crates/rend3-alacritty/src/: glyph.wgsl  gpu.rs  lib.rs  shader.wgsl  shaders.wgsl  solid.wgsl  terminal.rs  text.rs
font-mud/src/: glyph_atlas.rs  lib.rs
guest/rust/: Cargo.toml
guest/rust/hearth-guest/: Cargo.toml
guest/rust/hearth-guest/src/: lib.rs  subscriber.rs
guest/rust/hearth-test-wasm/: Cargo.toml
guest/rust/hearth-test-wasm/src/: lib.rs
kindling/: Cargo.toml
kindling/.cargo/: config.toml
kindling/host/: Cargo.toml
kindling/host/src/: canvas.rs  debug_draw.rs  fs.rs  lib.rs  macros.rs  registry.rs  renderer.rs  terminal.rs  time.rs  wasm.rs  window.rs
kindling/init/: Cargo.toml
kindling/init/src/: lib.rs
kindling/panic-test/: Cargo.toml
kindling/schema/: Cargo.toml
kindling/schema/src/: lib.rs
kindling/services/debug-grid/: Cargo.toml
kindling/services/debug-grid/src/: lib.rs
kindling/services/panic-test/: Cargo.toml
kindling/services/panic-test/src/: lib.rs
kindling/services/skybox/: Cargo.toml
kindling/services/skybox/src/: lib.rs
kindling/services/terminal-demo/: Cargo.toml
kindling/services/terminal-demo/src/: lib.rs
kindling/services/window-test/: Cargo.toml
kindling/services/window-test/src/: lib.rs
kindling/utils/: Cargo.toml
kindling/utils/src/: lib.rs  registry.rs
main/client/: Cargo.toml
main/client/src/: main.rs  window.rs
main/ctl/: Cargo.toml
main/ctl/src/: main.rs
main/server/: Cargo.toml
main/server/src/: main.rs
plugins/canvas/: Cargo.toml
plugins/canvas/src/: lib.rs  shaders.wgsl
plugins/daemon/: Cargo.toml
plugins/daemon/src/: lib.rs
plugins/debug-draw/: Cargo.toml
plugins/debug-draw/src/: lib.rs  shaders.wgsl
plugins/fs/: Cargo.toml
plugins/fs/src/: lib.rs
plugins/hearth-network/: Cargo.toml
plugins/init/src/: lib.rs
plugins/network/: Cargo.toml
plugins/network/src/: connection.rs  encryption.rs  lib.rs
plugins/rend3/: Cargo.toml
plugins/rend3/src/: lib.rs
plugins/rend3/src/utils/: mod.rs
plugins/renderer/: Cargo.toml
plugins/renderer/src/: lib.rs
plugins/terminal/: Cargo.toml
plugins/terminal/examples/: demo.rs
plugins/terminal/src/: draw.rs  grid.wgsl  lib.rs  terminal.rs  text.rs
plugins/time/: Cargo.toml
plugins/time/src/: lib.rs
plugins/wasm/: Cargo.toml
plugins/wasm/examples/: run_wasm.rs
plugins/wasm/src/: lib.rs
tools/depgraph/: Cargo.toml
tools/depgraph/src/: main.rs
tools/kindling-build/: Cargo.toml
tools/kindling-build/src/: main.rs
