[workspace]
resolver = "2"
members = [ "crates/*", "kindling/build"]

[workspace.dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
flume = "0.11"
glam = { version = "0.20", features = ["serde"] }
hearth-cognito.path = "crates/hearth-cognito"
hearth-core.path = "crates/hearth-core"
hearth-daemon.path = "crates/hearth-daemon"
hearth-debug-draw.path = "crates/hearth-debug-draw"
hearth-init.path = "crates/hearth-init"
hearth-ipc.path = "crates/hearth-ipc"
hearth-fs.path = "crates/hearth-fs"
hearth-macros.path = "crates/hearth-macros"
hearth-network.path = "crates/hearth-network"
hearth-rend3.path = "crates/hearth-rend3"
hearth-schema.path = "crates/hearth-schema"
hearth-terminal.path = "crates/hearth-terminal"
hearth-wasm.path = "crates/hearth-wasm"
kindling-build.path = "kindling/build"
ouroboros = "0.18.0"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1.37"
wasmtime = "11"

[workspace.dependencies.serde]
version = "1.0.103, < 1.0.171"
default-features = false
features = ["derive"]
