[workspace]
resolver = "2"
members = ["core/*", "kindling/build", "main/*", "plugins/*"]

[workspace.dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
flume = "0.11"
glam = { version = "0.20", features = ["serde"] }
hearth-cognito.path = "plugins/hearth-cognito"
hearth-daemon.path = "plugins/daemon"
hearth-debug-draw.path = "plugins/hearth-debug-draw"
hearth-init.path = "plugins/hearth-init"
hearth-ipc.path = "core/ipc"
hearth-fs.path = "plugins/hearth-fs"
hearth-macros.path = "core/macros"
hearth-network.path = "plugins/hearth-network"
hearth-rend3.path = "plugins/hearth-rend3"
hearth-runtime.path = "core/runtime"
hearth-schema.path = "core/schema"
hearth-terminal.path = "plugins/hearth-terminal"
hearth-wasm.path = "plugins/hearth-wasm"
kindling-build.path = "kindling/build"
ouroboros = "0.18.0"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1.37"
wasmtime = "11"

[workspace.dependencies.serde]
version = "1.0.103, < 1.0.171"
default-features = false
features = ["derive"]
