[workspace]
resolver = "2"
members = ["core/*", "kindling/build", "main/*", "plugins/*"]

[workspace.dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
flume = "0.11"
glam = { version = "0.20", features = ["bytemuck", "serde"] }
hearth-canvas.path = "plugins/canvas"
hearth-daemon.path = "plugins/daemon"
hearth-debug-draw.path = "plugins/debug-draw"
hearth-init.path = "plugins/init"
hearth-ipc.path = "core/ipc"
hearth-fs.path = "plugins/fs"
hearth-macros.path = "core/macros"
hearth-network.path = "plugins/network"
hearth-rend3.path = "plugins/rend3"
hearth-renderer.path = "plugins/renderer"
hearth-runtime.path = "core/runtime"
hearth-schema.path = "core/schema"
hearth-terminal.path = "plugins/terminal"
hearth-time.path = "plugins/time"
hearth-wasm.path = "plugins/wasm"
kindling-build.path = "kindling/build"
ouroboros = "0.18.0"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1.37"
wasmtime = "11"

[workspace.dependencies.serde]
version = "1.0.103, < 1.0.171"
default-features = false
features = ["derive"]
