[workspace]
resolver = "2"
members = ["init", "services/*", "host"]
exclude = ["build"]

[workspace.dependencies]
hearth-guest = { path = "../guest/rust/hearth-guest"}
kindling-host = { path = "host"}
lazy_static = "1.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1" }
