[package]
name = "hearth-runtime"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
async-trait = "0.1"
blake3 = "1.3"
bytes = "1.3"
directories = "4"
flue = "0.2.0"
flume = { workspace = true }
hearth-schema = { workspace = true }
ouroboros = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sharded-slab = "0.1"
slab = "0.4.8"
tokio = { version = "1.24", features = ["full"] }
toml = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
