[package]
name = "hearth-schema"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bitflags = { version = "2.3", features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# enable wayland and X to compile on Linux but explicitly disable some unnecessary features
[dependencies.winit]
version = "0.27"
default-features = false
features = ["serde", "wayland-dlopen", "x11"]
