[package]
name = "font-mud"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
glam = "0.20"
ttf-parser = "0.18.1"
rect_packer = "0.2.1"

[dependencies.msdfgen]
git = "https://github.com/hearth-rs/msdfgen-rs"
branch = "fix-mac-builds"
default-features = false
features = ["ttf-parser", "png"]

[dev-dependencies]
png = "0.17"
