[package]
name = "hearth-cognito"
version = "0.1.0"
edition = "2021"

[dependencies]
hearth-macros = { workspace = true }
hearth-rpc = { workspace = true }
hearth-wasm = { workspace = true }
tracing = { workspace = true }
wasmtime = "5.0.0"

[dev-dependencies]
tokio = { version = "1.24", features = ["macros", "rt"] }
