[package]
name = "hearth-cognito"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bytemuck = { workspace = true }
hearth-core = { workspace = true }
hearth-macros = { workspace = true }
hearth-wasm = { workspace = true }
ouroboros = { workspace = true }
serde_json = { workspace = true }
slab = "0.4.8"
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
hearth-types = { workspace = true }
tokio = { version = "1.24", features = ["macros", "rt"] }
