[package]
name = "hearth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.3"
bytes = "1.3"
hearth-ipc = { workspace = true }
hearth-rpc = { workspace = true }
tokio = { version = "1.24", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
