[package]
name = "hearth-debug-draw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bytemuck = { workspace = true }
flume = { workspace = true }
glam = { workspace = true }
hearth-core.workspace = true
hearth-rend3.workspace = true
hearth-types.workspace = true
rend3-alacritty.workspace = true
