[package]
name = "hearth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
hearth-core = { workspace = true }
hearth-network = { workspace = true }
hearth-rpc = { workspace = true }
remoc = { workspace = true, features = ["full"] }
tokio = { version = "1.24", features = ["full"] }
tracing = { workspace = true }
