[package]
name = "hearth-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
hearth-cognito = { workspace = true }
hearth-core = { workspace = true }
hearth-daemon = { workspace = true }
hearth-init = { workspace = true }
hearth-fs = { workspace = true }
hearth-network = { workspace = true }
hearth-types = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.24", features = ["full"] }
tracing = { workspace = true }
