[package]
name = "hearth-terminal"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alacritty_terminal = "0.16"
bytemuck.workspace = true
glam.workspace = true
hearth-core.workspace = true
hearth-rend3.workspace = true
hearth-types.workspace = true
mio-extras = "2"
owned_ttf_parser = "0.19"

[dependencies.font-mud]
git = "https://git.disroot.org/hearth/font-mud"
rev = "c1e6b66"

[dev-dependencies]
image = "0.24"
rend3-framework = "0.3"
winit = "0.26"
