[package]
name = "hearth-types"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bitflags = { version = "2.3", features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
glam = { version = "0.20", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
