[package]
name = "hearth-types"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bitflags = { version = "2.3", features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winit = { version = "0.28", default-features = false, features = ["serde"] }
