[package]
name = "rend3-alacritty"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
font-mud = { path = "../font-mud" }
glam = "0.20"
rend3 = "0.3"
rend3-routine = "0.3"
ttf-parser = "0.18.1"
wgpu = "^0.12"

[dev-dependencies]
rend3-framework = "0.3"
winit = "0.26"
