[package]
name = "rend3-alacritty"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
alacritty_terminal = "0.16"
bytemuck = { workspace = true }
font-mud = { path = "../font-mud" }
glam = "0.20"
mio-extras = "2"
owned_ttf_parser = "0.19.2"
rend3 = "0.3"
rend3-routine = "0.3"
wgpu = "^0.12"

[dev-dependencies]
image = "0.24"
rend3-framework = "0.3"
winit = "0.26"
