[package]
name = "hearth-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version= "3.2", features = ["derive"] }
glam = { workspace = true }
hearth-daemon = { workspace = true }
hearth-debug-draw = { workspace = true }
hearth-fs = { workspace = true }
hearth-init = { workspace = true }
hearth-network = { workspace = true }
hearth-rend3 = { workspace = true }
hearth-runtime = { workspace = true }
hearth-terminal = { workspace = true }
hearth-time = { workspace = true }
hearth-wasm = { workspace = true }
tokio = { version = "1.24", features = ["full"] }
tracing = { workspace = true }

# enable wayland and X to compile on Linux but explicitly disable some unnecessary features
[dependencies.winit]
version = "0.27"
default-features = false
features = ["x11", "wayland", "wayland-dlopen"]
