[package]
name = "hearth-ctl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
hearth-ipc = { workspace = true }
hearth-schema = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.24", features = ["macros", "net", "rt", "signal"] }
