[package]
name = "hearth-debug-draw"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytemuck = { workspace = true }
flume = { workspace = true }
glam = { workspace = true }
hearth-rend3.workspace = true
hearth-runtime.workspace = true
hearth-schema.workspace = true
itertools = "0.11"
