[package]
name = "hearth-network"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
argon2 = "0.4"
bincode = "1.3"
chacha20 = { version = "0.9", features = ["std", "zeroize"] }
flume = { workspace = true }
hearth-schema = { workspace = true }
opaque-ke = { version = "2.0", features = ["argon2"] }
rand = { version = "0.8", features = ["getrandom"] }
tokio = { version = "1.24", features = ["io-util", "rt", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.24", features = ["io-util", "macros", "rt"] }
