[package]
name = "kindling-window-test"
version = "0.1.0"
edition = "2021"
description = "A test of Hearth's window input."

[package.metadata.service]
name = "rs.hearth.kindling.WindowTest"
targets = []
dependencies.need = [ "hearth.Window" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
hearth-guest.workspace = true
kindling-host.workspace = true
